website: RU - sync ru/projects pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53935

--- a/website/content/ru/projects/summerofcode.adoc
+++ b/website/content/ru/projects/summerofcode.adoc
@@ -1,106 +1,196 @@
 ---
-title: "Проекты FreeBSD на лето"
+title: "FreeBSD и Google Summer of Code"
 sidenav: developers
 ---
 
-include::shared/authors.adoc[]
+Google Summer of Code (GSoC) — это ежегодное мероприятие, спонсируемое компанией Google Inc.
+Оно позволяет участникам провести от 8 до 22 недель летом, работая в качестве стажёров над проектами с открытым исходным кодом.
+Работа выполняется под руководством одного или нескольких наставников, а труд вознаграждается https://developers.google.com/open-source/gsoc/help/student-stipends[стипендией].
+FreeBSD участвует в программе каждый год с 2005 года и вновь получила место в качестве наставляющей организации в 2024 году с https://wiki.FreeBSD.org/SummerOfCode2024Projects[одиннадцатью проектами].
 
-= Проекты FreeBSD на лето
+Если вы интересуетесь разработкой операционных систем, тажировка в такой давней и успешной ОС с открытым исходным кодом, как FreeBSD — это прекрасная возможность.
+Основанная в 1993 году, FreeBSD представляет собой современную операционную систему для серверных, настольных и встраиваемых платформ.
+Она предлагает передовые сетевые возможности, впечатляющие функции безопасности и высокую производительность.
+Она лежит в основе многих коммерческих продуктов, включая Sony Playstation, Nintendo Switch, OnTap/GX от NetApp, ОС Junos от Juniper и стала отправной точкой для создания ядра Apple OS X.
+Проект состоит из сотен коммиттеров и множества других участников, имеющих опыт работы в различных частях операционной системы.
+Многие из наших бывших студентов GSoC впоследствии стали разработчиками FreeBSD.
+После окончания лета Google или FreeBSD Foundation могут спонсировать участие участников в конференциях для представления своей работы.
+Это открывает отличные возможности для профессионального нетворкинга!
 
-Проект FreeBSD с удовольствием принял участие в программе http://code.google.com/summerofcode.html[Summer of Code 2005] компании Google. В её рамках предполагается оказать финансовую поддержку студентам, которые будут участвовать в проектах с открытым кодом в течение летних каникул.
-
-* <<ideas,Примеры предложенных идей>>
-** <<p-userland,Пользовательские программы / Инструменты установки>>
-** <<p-filesystem,Файловая система>>
-** <<p-networking,Сетевые возможности>>
-** <<p-security,Информационная безопасность>>
-** <<p-kernel,Ядро>>
-* <<mentors,Возможные руководители>>
+* <<steps,Важные шаги>>
+* <<project,Поиск проекта и наставника>>
+* <<proposals,Рекомендации по составлению заявки>>
+* <<communication,Взаимодействие и открытость>>
 * <<faq,Часто задаваемые вопросы>>
 
-[[ideas]]
-== Примеры предложенных идей
+[[steps]]
+== Важные шаги
 
-[[p-userland]]
-=== Пользовательские программы / Инструменты установки
+* Узнайте, https://summerofcode.withgoogle.com/get-started[соответствуете ли вы требованиям] для участия в GSoC.
+* Следите за https://developers.google.com/open-source/gsoc/timeline[сроками проведения].
+* Найдите проект и наставника.
+* Подайте заявку в Google.
 
-* *Интеграция с BSD Installer*: Подготовка прототипа для интеграции с http://www.bsdinstaller.org/[программой установки BSD], чтобы полностью заменить устаревшую программу sysinstall, используемую во FreeBSD. Уже было выполнено достаточно много черновой работы, так что любой человек с достаточными знаниями за несколько месяцев может сделать в этой области много хорошего, особенно при соответствующем руководстве более опытных разработчиков FreeBSD.
-* *Встроенная программа установки через PXE*: Было бы замечательно иметь встроенную возможность выполнять установку через PXE. Это позволило бы создать установочный сервер на базе CDROM с FreeSBIE на одной машине, указать в BIOS других компьютеров на загрузку с PXE, и выполнить оставшиеся действия как по мановению волшебной палочки. Это очень помогло бы при разворачивании кластерных узлов и тому подобных задачах.
-* *Полностью интегрированный мониторинг SNMP*: Подключаемые модули для нашей технологии BSNMP для мониторинга отдельных состояний системы, в частности, загрузки, дискового пространства, статистики по виртуальной памяти, энтропии, правилам сетевого экрана и его состоянии, очередям и отказам/подтверждениям sendmail и подобным вещам. Клиент SNMP, который мог бы собирать и централизовать снимаемые данные, обрабатывать их и так далее. Координируют {philip}, {glebius}, {harti} и {rwatson}.
-* *Интеграция поддержки Xen*: Поддержка http://www.cl.cam.ac.uk/Research/SRG/netos/xen/[монитора виртуальной машины Xen] включается во FreeBSD -CURRENT, поэтому установочная программа должна быть обновлена, чтобы могла быть возможна установка системы Xen с несколькими узлами FreeBSD и так далее.
-* *Переписать CVSup на C*: http://www.cvsup.org[CVSup] представляет собой ориентированную на CVS сетевую систему общего назначения для распространения файлов. Она массово использовалась около 10 лет для распространения CVS-дерева FreeBSD между зеркалами по всему миру. CVSup была написана на Modula-3 и её реализация на языке C позволит улучшать эту систему большему количеству пользователей. Архитектура CVSup является многопоточной, так что претендент должен иметь некоторый опыт работы с pthreads. Дополнительными требованиями является понимание хранилищ исходных текстов Subversion и Perforce. На данный момент часть работ по написанию и проектированию уже выполнена. Дополнительная информация об этом проекте находится http://mu.org/~mux/csup.html[здесь]. Координатором является {mux}.
-* *Улучшение нашей системы регрессивного тестирования*: Ник Клэйтон создал инфраструктуру проведения регрессивных тестов при помощи языка Perl. Большее количество тестов должно работать с libtap. В основном здесь две части. Во-первых, многие из существующих тестов должны вместо assert() использовать ok() и близкие вызовы из libtap. Во-вторых, нужно написать большее количество регрессивных тестов. К этой работе приглашаются студенты, знакомые с языками написания скриптов и тестированием программного обеспечения. Координатором является {nik}.
-* *Отслеживание производительности во времени*: Одной из больших проблем проекта масштаба FreeBSD является мониторинг изменений в характеристиках производительности с течением времени. Для этого требуется несколько вещей. Среди них набор соответствующих тестов, оборудование для их запуска, база данных для хранения результатов и программное обеспечения для извлечения интересующих нас результатов и их выдачи. Решение этих проблем в целом, видимо, выходит за рамки работы на лето, однако интересующая нас часть может быть выполнена. Координатором является {brooks}.
+[[project]]
+== Поиск проекта и наставника
 
-[[p-filesystem]]
-=== Файловая система
+Ключевой шаг — выбрать подходящий проект и наставника.
+Если вы хотите добиться успеха, начните поиск заранее.
+https://wiki.FreeBSD.org/SummerOfCodeIdeas[Список идей для проектов] — хорошая отправная точка, но не ограничивайтесь только этими проектами.
+Вы можете написать техническим контактам, указанным для проекта, и/или отправить письмо в рассылку hackers@FreeBSD.org.
+Представьтесь и опишите свои интересы и опыт.
+Это может заинтересовать одного или нескольких разработчиков, которые смогут предложить проект и наставника.
 
-* *Журналирование UFS*: Добавление журналирования и функций воспроизведения для файловой системы UFS. Целью является повышение надёжности файловой системы и значительное снижение необходимости проведение полной проверки 'fsck' после сбоя или отключения электроэнергии. Это проект, который будет иметь дело не только с внутренним устройством файловой системы, но и систем виртуальной памяти и буферизации/кэширования, так что это прекрасная возможность изучить многие фундаментальные аспекты операционной системы. +
-Работа над этой задачей уже ведётся, но дополнительная помощь всегда нужна и будет приветствоваться. Кандидаты должны иметь хотя бы поверхностное представление о структурах данных файловой системы (i-узлы, свободные списки, каталоги) и сильное желание больше узнать о таких системах. Этот проект станет существенным пунктом любого резюме, но он не для слабых людей. Координатором является {scottl}.
-* *Autofs*: Создание файловой системы autofs по её описанию. Кандидаты должны обладать некоторыми знаниями в области файловых систем, в том числе сетевых. Основная масса работ выполнена, однако транспорт уровня ядра и взаимодействие с автомонтировщиком "amd" ещё требуют завершения. Координирует работы {alfred}.
-* *Менеджер логических томов*
-* *Волшебные символические ссылки*: Реализовать волшебные символические ссылки. Кандидаты должны обладать некоторыми знаниями о файловых системах. Имеются экспериментальные http://www.freebsd.org/~jwd/magiclinks.tgz[патчи] для 4-STABLE, хотя нужно будет изучить реализацию DragonFly в виде утилиты setvar. Координатором может быть {jwd}.
+Мы также ведем более общую https://wiki.FreeBSD.org/IdeasPage[страницу идей].
+Эти проекты менее подходят для Summer of Code, так как их объем может быть больше или меньше летнего проекта, или для них может не быть четко определенного наставника.
+Если вы решите предложить один из них, мы рекомендуем написать в нашу рассылку hackers@FreeBSD.org за помощью.
+Эти страницы существуют, чтобы помочь найти вдохновение.
+Еще одним местом для поиска идей о предстоящих проектах разработки в FreeBSD являются link:../../status/[Отчеты о состоянии FreeBSD].
+Участники также могут и даже приветствуются, если они предлагают собственные идеи; и если предложение убедительно, мы постараемся подобрать вам наставника!
 
-[[p-networking]]
-=== Сетевые возможности
+== Прошлые проекты
 
-* *Устройство, реализующее сетевой диск*: Добавить возможность удалённого доступа к устройствам из одной машины к другой. Целью является обеспечения удалённого доступа к таким ресурсам, как диски, звуковые адаптеры и другое оборудование, по сети. Перспективные кандидаты должны понимать или иметь интерес к системам удалённого вызова функций, сетевым возможностям (TCP/IP), быть заинтересованными в изучении того, как работают драйверы устройств Unix, будет требоваться также знание управления процессами. Этот проект станет хорошим вкладом в резюме, но но не для слабых людей. Координированием занимается {alfred}.
-* *NFS Lockd (усиление семантики)*: Улучшение работы NFS lockd во FreeBSD. Apple внесла определённые улучшения, которые могут быть и в нашем коде. Реализовать восстановление состояния в lockd. Кандидату предстоит изучить, как переносить код из одного ядра в другое, а также отслеживать состояния на стороне клиента. Этот проект будет хорошим дополнением к резюме. Координирует работу {alfred}.
-* *NFS Lockd (реализация на уровне ядра)*: Улучшение семантики работы NFS lockd во FreeBSD. Перенос реализации lockd в ядро обещает несколько существенных улучшений как в производительности, так и семантике. Кандидаты должны иметь хорошее представление об NFS, блокировке, RPC и работе с сетью на уровне ядра. Это прекрасное дополнение к резюме, взваливающее на вас обязанности "знания NFS" на всю оставшуюся карьеру, и эта работа не для слабых людей. Координацию работ выполняет {alfred}.
-* *Упорядочивание пользовательского/системного интерфейса (net/if_var.h)*: Более _восьми_ лет назад объявления функций сетевого интерфейса были разделены на net/if.h и net/if_var.h. Это было сделано для того, чтобы net/if_var.h присутствовал только в ядре, а net/if.h содержал общедоступные интерфейсы. На сегодняшний день внутренний заголовок, net/if_var.h, всё ещё включается во многие пользовательские приложения. В некоторых случаях это случается из-за интерфейсов, которые на самом деле не являются внутренними для ядра. В других случаях эти структуры использовались вместе с libkvm для прямого обращения к информации ядра. Этот проект должен решить оба типа проблем, в первую очередь за счёт переписывания команды netstat(1) и любых других, работающих с сетью и использующих libkvm, так, чтобы они использовали альтернативные пользовательские интерфейсы, при необходимости их нужно будет создавать. Функции netstat по анализу аварийных дампов, вероятно, нужно будет выделить в отдельную программу. Координацией занимается {brooks}.
-* *Перенос Web100 на FreeBSD*: Проект http://www.web100.org/[Web100] был начат для решения проблем с производительностью TCP при работе поверх длинных и толстых сетевых каналов. В рамках проектах был создан интересный набор патчей для Linux для тонкой настройки и мониторинга, и они обеспечивают значительно лучшую производительность в этой области. Интеграция этой работы во FreeBSD может дать значительные преимущества в плане производительности TCP при определённых средах эксплуатации. Для возможностей Web100 должны быть созданы и интегрированы в систему соответствующие абстракции FreeBSD. Влияние этих изменений на производительность должно быть проверено до того, как они будут внесены в систему. Идеальный кандидат для выполнения этой работы имеет некоторые знания об операциях протокола TCP и знаком с с интерфейсами ядра. Координацию осуществляет {brooks}.
-* *Поддержка NAT в ipfw2 и улучшения libalias*: Включенный во FreeBSD межсетевой экран ipfw2 на данный момент не поддерживает NAT на уровне ядра, хотя его архитектура предусматривает расширение и базовый механизм динамического создания правил и их просмотра в ядре уже присутствует. Одновременно с этим пользовательский NAT поддерживается в библиотеке libalias, которая недавно была преобразована в модуль ядра. У проекта две следующие цели:
-** создание механизма для вызова LibAlias из ipfw2
-** пересмотр LibAlias для улучшения её структур, в частности:
-*** применять, исследовать и, возможно, оптимизировать базовые операции (создание сеанса, поиск и уничтожение; восстановление tcp-потока);
-*** обеспечить механизм регистрации/отключения обработчиков протоколов вместо манипуляции с исходным кодом;
-*** улучшить соответствие структуры данных ядра и libalias для возможного снижения количества копий.
+Для вдохновения вот страницы вики с проектами прошлых лет:
+https://wiki.FreeBSD.org/SummerOfCode2025Projects[2025],
+https://wiki.FreeBSD.org/SummerOfCode2024Projects[2024],
+https://wiki.FreeBSD.org/SummerOfCode2023Projects[2023],
+https://wiki.FreeBSD.org/SummerOfCode2022Projects[2022],
+https://wiki.FreeBSD.org/SummerOfCode2021Projects[2021],
+https://wiki.FreeBSD.org/SummerOfCode2020Projects[2020],
+https://wiki.FreeBSD.org/SummerOfCode2019Projects[2019],
+https://wiki.FreeBSD.org/SummerOfCode2018Projects[2018],
+https://wiki.FreeBSD.org/SummerOfCode2017Projects[2017],
+https://wiki.FreeBSD.org/SummerOfCode2016Projects[2016],
+https://wiki.FreeBSD.org/SummerOfCode2015Projects[2015],
+https://wiki.FreeBSD.org/SummerOfCode2014Projects[2014],
+https://wiki.FreeBSD.org/SummerOfCode2013Projects[2013],
+https://wiki.FreeBSD.org/SummerOfCode2012Projects[2012],
+https://wiki.FreeBSD.org/SummerOfCode2011Projects[2011],
+https://wiki.FreeBSD.org/SummerOfCode2010Projects[2010],
+https://wiki.FreeBSD.org/SummerOfCode2009Projects[2009],
+https://wiki.FreeBSD.org/SummerOfCode2008[2008],
+https://wiki.FreeBSD.org/SummerOfCode2007[2007],
+https://wiki.FreeBSD.org/SummerOfCode2006[2006],
+https://wiki.FreeBSD.org/SummerOfCode2005[2005].
+
+[[proposals]]
+== Рекомендации по составлению заявки
+
+Участники несут ответственность за написание заявки и её отправку в Google до окончания срока подачи заявок.
+Следующая структура была адаптирована из The Perl Foundation.
+Цель заявки — определить, что должно быть сделано, объяснить, почему это необходимо, и убедить нас в том, что:
+
+* Вы квалифицированы для выполнения этого проекта. Это означает как наличие необходимого опыта, так и демонстрацию общего понимания проблемы.
+* У вас есть необходимые ресурсы (особенно время!) для завершения проекта в течение рабочего периода Summer of Code.
+
+Сильная заявка включает (как минимум):
+
+== Общая информация
+
+* *Имя*
+* *Адрес электронной почты*
+* *Телефон*
+* *Мессенджер/IRC*
+* *Доступность*
 +
-Указанное выше относится к 5.x и -current, а возможно также и к 4.x. Претенденты должны быть знакомы с вопросами работы сети, связанными с NAT, а также стеком сетевых протоколов ядра. Координирует работы mailto:rizzo@icir.org[Luigi Rizzo].
+Сколько часов в неделю вы сможете уделять этой работе? Сколько — другим делам?
+Какие еще обязательства (работа, учеба, отпуск, свадьбы и т.д.) у вас есть на это лето?
+Будьте как можно конкретнее: когда проект начнется и закончится?
+Вы должны быть готовы составить ежедневный график до начала программы.)
++
+*Обратите внимание*: участие в Google Summer of Code требует значительных временных затрат, и вам не следует подавать заявку, если у вас уже запланирована другая полноценная работа на лето.
+* *Биография*
++
+Кто вы?
+Какими навыками вы обладаете для этого проекта?
+Каким было ваше прошлое участие в проекте FreeBSD? (Предыдущее участие не требуется, но в идеале вы хотя бы установили FreeBSD и, возможно, исправили одну-две ошибки)
+Если ваш проект включает программирование на определенном языке, таком как C, или в определенной среде, например, в ядре или на встраиваемой платформе, какой у вас есть опыт работы в этой области?
+Вы знакомы с системами контроля версий или используете их?
+Вы проходили курсы, которые будут актуальны для вашей идеи проекта? Что, по вашему мнению, вам нужно будет изучить для завершения этого проекта?
+* *Возможный наставник*
++
+Необязательно, но настоятельно рекомендуется.
+Не указывайте здесь имя, если вы с ним не связались.
 
-[[p-security]]
-=== Информационная безопасность
+== Информация о проекте
 
-* *SecureMines*: Добавить в систему мета-данные, позволяющие отлавливать нарушителей и вести журнал аудита системы. Целью этого проекта является создание нескольких способов обозначения некоторого события как стороннего действия (например, открытие файла-ловушки), которое приводит к остановке системы и выдаче максимального количества информации. Среди возможностей рассматривается использование расширенных атрибутов для пометки таких "мин". Кандидаты должны иметь представление о модели процессов в Unix. Координацией занимается {alfred}.
-* *SEBSD*: SEBSD является переносом модели информационной безопасности NSA из SELinux FLASK/TE в операционную систему FreeBSD при помощи технологии MAC из TrustedBSD. На данный момент система находится в экспериментальном состоянии, для одного или нескольких студентов стало бы хорошим проектом посвятить лето её переводу из состояния экспериментального прототипа к чему-то, что можно реально использовать. Сюда может быть включена работа по разработке политики, интеграции SEBSD компоненты установочной программы, адаптация пользовательских компонентов, пилотное внедрение, документирование и так далее. Кандидаты должны иметь некоторый опыт в области технологий контроля доступа, особенно мандатного способа управления; опыт работы с альтернативными моделями информационной безопасности будет плюсом, как и опыт участия в разработке ОС. Однако работа здесь имеет разный уровень, все предложения будут рассмотрены! Координированием занимается {rwatson}.
+* *Название проекта*
++
+Не более сорока символов о том, что вы предлагаете сделать.
+* *Описание проекта*
++
+Несколько абзацев, описывающих ваш проект.
+Прямые копии со страницы идей будут отклонены — заявки должны показывать, что вы провели некоторое исследование проблемы и её решений.
+Включите как то, что вы будете делать, так и почему это хорошо для проекта FreeBSD.
+* *Результаты*
++
+Список измеримых результатов и соответствующих этапов разработки кода.
+Мы предлагаем как минимум два этапа до промежуточной оценки и два после.
+Там, где это уместно, этот график должен включать несколько точек для коммита или релиза, чтобы люди могли получить выгоду от вашей работы и/или протестировать её как можно раньше.
+* *План тестирования*
++
+Какие части вашего кода нуждаются в тестировании и как вы планируете их тестировать?
+Это может включать как функциональное тестирование, так и тесты производительности.
+* *График проекта*
++
+Сколько времени займет проект? Когда вы можете начать работу?
 
-[[p-kernel]]
-=== Ядро
+[[communication]]
+== Взаимодействие и открытость
 
-* *Обновления Linuxulator*: FreeBSD обеспечивает двоичную совместимость с Linux за счёт применения таблицы системных вызовов Linux, которая применяется при исполнении бинарных файлов Linux в формате ELF. Эта реализация должна быть проверена на соответствие современным ядрам Linux, недостающие важные системные вызовы могут быть добавлены для обеспечения работы всех основных приложений во FreeBSD. Студент должен уметь читать и понимать чужой код на языке C, писать код на C и иметь хорошее представление о том, как повторно реализовать код GPL в чистых условиях (без копирования и вставки кода!).
-* *Реализация пассивного охлаждения в ACPI*: Для охлаждения процессора должен использоваться интерфейс cpufreq, основанный на различных настройках _PSV. Кроме того, нам необходимо реализовать различные интервалы опроса для температурных зон, что основано как на пассивных настройках, так и на опросах, явно задаваемых в ASL. Этот проект требует хорошего знания C, понимания программно/аппаратного интерфейса, наличия лэптопа, работающего с ACPI, и работы с ядром. Координацией занимаются {njl} и {bruno}.
-* *Остановка со сбросом на диск*: Реализовать механизм остановки/восстановления с использованием диска. Возможно использование функций создания дампа для сброса страниц памяти на диск, затем обращение к ACPI для перевода системы в состояние S4 или выключения питания. Восстановление потребует изменений в загрузчике, обеспечивающих прямую загрузку образа памяти и продолжения выполнения. Этот проект требует хорошего знания C, понимания программно-аппаратного интерфейса, наличия лэптопа, работающего с ACPI, и работы с ядром. Координацию работ выполняют {njl} и {bruno}.
-* *Реализовать и замерить характеристики различных алгоритмов для powerd(8)*: Реализовать ряд алгоритмов предсказания (а возможно, создать собственные) и замерить их характеристики на предмет энергопотребления и потери производительности. Лучшим алгоритмом будет тот, что экономит максимальное количество энергии с наименьшими потерями производительности. Требует базовых знаний языка C, наличия лэптопа, поддерживаемого cpufreq(4) (предполагается современный процессор Pentium-M) и некоторых знаний статистики. Координацию осуществляют {njl} и {bruno}.
-* *Мета-язык ядра*: Разработка диалекта языка C, упрощающего написание кода ядра. В нём должны присутствовать расширения языка, позволяющие писать более ясный для понимания код ядра и с меньшим количеством ошибок. Примером может служить языковая поддержка связных списков, устраняющая необходимость в запутанных MACRO. Координируют работу {gnn}и {phk}. Статья Wiki с более полной информацией доступна http://wikitest.freebsd.org/moin.cgi/K[здесь].
-* *Подключаемые дисковые планировщики*: В рамках проекта нужно создать механизмы реализации подключаемых планировщиков дисков, взамен стандартной элеваторной схемы, используемой во FreeBSD, а затем реализовать по крайней мере один альтернативный механизм (к примеру, варианты с пропорциональным распределением и тому подобные схемы) для демонстрации эффективности нового интерфейса. Претенденты должны быть знакомы с теорией планирования работы с диском и, в некоторой степени, с программированием ядра. Координатором выступает mailto:rizzo@icir.org[Luigi Rizzo].
-
-Дополнительные проекты можно найти, просмотрев страницу link:../../[Разрабатываемых проектов FreeBSD] или некоторые из последних link:../../news/status[Отчётов о ходе работ].
-
-[[mentors]]
-== Руководители
-
-Если вы хотите принять участие в проекте, который здесь в явном виде не указан, вы можете обратиться к одному из потенциальных руководителей, указанных ниже, для того, чтобы составить предложение в одной из следующих больший категорий.
-
-* *Сетевые возможности*: {alfred}, {brooks} и {sam}
-* *Файловые системы*: {scottl}, {alfred}
-* *GEOM*: {phk}
-* *Подготовка релизов / Интеграция*: re@FreeBSD.org
-* *TrustedBSD / Информационная безопасность*: {rwatson}
-* *Подключаемые дисковые планировщики*: {luigi}.
-* *ACPI*: {njl} и {bruno}.
-* *Звук*: {matk}.
-
-Если ваш проект не был выбран компанией Google для финансирования, но вы всё же полагаете, что ваш проект этого заслуживает, сообщите об этом по электронной почте в адрес proposals@FreeBSD.org.
+Мы ожидаем, что работа над проектом будет вестись в git, и требуем регулярной выкладки изменений в публичный репозиторий.
+Обеспечение публичного доступа способствует сотрудничеству, позволяет архивировать проект и помогает наставникам и сообществу поддерживать и отслеживать текущую работу.
+От участников также попросят вести и обновлять вики-страницы о своей работе.
+Электронная почта (включая списки рассылки), IRC, мгновенные сообщения (Matrix, Slack и др.) и видеоконференции — вот некоторые из способов, которыми участники и наставники общались в прошлом.
+Участникам также рекомендуется использовать эти и другие методы для взаимодействия с широким сообществом FreeBSD.
 
 [[faq]]
 == Часто задаваемые вопросы
 
-* *Подойду ли я?*
+* *Где можно найти список сроков?*
 +
-Пожалуйста, обратитесь к http://code.google.com/summfaq.html[FAQ для участников] компании Google для решения всех вопросов, касающихся требований к участникам.
-* *Как написать заявку?*
+https://developers.google.com/open-source/gsoc/timeline/[График GSoC] является авторитетным источником подробной информации о расписании.
+
+* *Где мне зарегистрироваться?*
 +
-Фонд Perl имеет хороший документ http://www.perlfoundation.org/gc/grants/proposals.html[HOWTO], описывающий как написать заявку на разработку с открытым кодом.
-* *Когда истекает срок подачи заявок?*
+Все участники должны зарегистрироваться и подавать заявки через https://summerofcode.withgoogle.com/[домашнюю страницу Google Summer of Code].
+
+* *Какой совет вы дадите участнику, который хочет подать заявку?*
 +
-Заявки должны быть получены Google до 14 июня.
+Опыт показывает, что самые сильные заявки поступают от участников, которые связываются с разработчиками FreeBSD и потенциальными наставниками задолго до подачи заявки, запрашивают отзывы о своих идеях и пишут заявки, отражающие время, потраченное на изучение и понимание проблемной области.
+Даже если разработчик(и) FreeBSD, с которыми вы свяжетесь, не станут в итоге наставником проекта, их отзыв может оказаться бесценным. +
+
+* *Могу я подать несколько заявок на проекты в проект FreeBSD?*
++
+Да, но обязательно уделите достаточное время каждой заявке.
+Мы не можем принять более одного проекта от одного участника, поэтому вам может быть лучше потратить больше времени на одну-две детальные заявки, чем подавать много менее подробных.
+
+* *Примет ли проект FreeBSD более одного участника для одной и той же идеи?*
++
+Как правило, мы принимаем только одного участника для любой данной идеи, поскольку большинство идей в нашем списке рассчитаны на одного участника на летний проект.
+Это веская причина подумать о том, чтобы предложить собственную идею или, по крайней мере, убедиться, что ваша заявка на одну из наших идей отражает ваш уникальный вклад и точку зрения.
+Если вы планируете подать несколько заявок, рассмотрите возможность подачи одной с идеей из списка, а другой — с оригинальной идеей.
+
+* *Что, если мою заявку не выберут в процессе отбора? Я все еще могу участвовать?*
++
+У нас всегда больше хороших заявок, чем мест для участников, но это не значит, что вы не можете выполнить проект в любом случае.
+Проект FreeBSD всегда приветствует новых добровольцев для работы над проектами и, как правило, рад предоставить наставничество и поддержку участникам, чьи заявки не были отобраны, чтобы позволить им все равно работать над своим проектом.
+Вам нужно будет поработать с администраторами GSoC проекта FreeBSD, чтобы найти возможного наставника.
+Однако Google не будет финансировать такое участие.
+
+* *Как я могу узнать больше о FreeBSD?*
++
+link://www.FreeBSD.org/[Домашняя страница проекта FreeBSD] — лучший способ узнать больше о проекте — оттуда вы можете перейти к Руководству FreeBSD, Руководству разработчика FreeBSD, архивам рассылок проекта, регулярным отчетам о состоянии проекта и многому другому.
+Если у вас есть вопросы по конкретным идеям проектов, пишите техническим контактам для этих идей.
+Если у вас есть общие вопросы по GSoC, связанные с FreeBSD, например, если вы не можете связаться с техническим контактом проекта, вам нужна помощь в поиске документации или вы хотите знать, с кем можно поговорить о вашей идее, отправьте их на soc-admins@FreeBSD.org.
+
+* *Где я могу связаться с людьми, чтобы обсудить идеи заявок или другие темы, связанные с FreeBSD и GSoc?*
++
+Вы можете связаться с нами в https://wiki.freebsd.org/SummerOfCode/IRC[канале IRC FreeBSD Summer of Code], написать в рассылку hackers или отправить письмо на soc-admins@FreeBSD.org.
+
+* *Где я могу найти больше информации от Google?*
++
+https://summerofcode.withgoogle.com/[Домашняя страница Google Summer Of Code] +
+https://developers.google.com/open-source/gsoc/resources/manual[Руководство GSoC для участников и наставников] +
+https://developers.google.com/open-source/gsoc/faq[Часто задаваемые вопросы GSoC] +
+https://developers.google.com/open-source/gsoc/videos[Видео]
