--- a/website/content/ru/projects/newbies.adoc
+++ b/website/content/ru/projects/newbies.adoc
@@ -7,67 +7,44 @@ include::shared/ru/urls.adoc[]
 
 = Информационные ресурсы для новичков
 
-Ниже перечислены некоторые их тех источников, которые новички во FreeBSD находят наиболее полезными при изучении FreeBSD. Присылайте ваши исправления и добавления на адрес mailto:freebsd-doc@FreeBSD.org[FreeBSD-doc@FreeBSD.org].
+== Получение FreeBSD
 
-* <<web-site,Использование веб-сервера FreeBSD>>
-* <<fbsd,Изучение FreeBSD>>
-* <<unix,Изучение UNIX(R)>>
-* <<xwin,Изучение X Window System>>
-* <<people,Помощь другим людям>>
+Последние выпуски FreeBSD доступны link:../../where/[здесь]. Перед началом работы, пожалуйста, внимательно ознакомьтесь с link:{handbook}bsdinstall[замечаниями по установке].
 
-[[web-site]]
-== Использование веб-сервера FreeBSD
-
-Этот веб-сервер является основным источником актуальной информации о FreeBSD. Новички находят особенно полезными следующие странички:
-
-* link:../../search/[Поиск] в Руководстве и FAQ, по всему веб-серверу или в архивах списков рассылки FreeBSD.
-* Страница link:../../docs[документации] содержит ссылки на Руководство и FAQ, учебники, информацию о принятии участия в проекте Documentation Project, документы на языках, отличных от английского, онлайн страницы справочника и многое другое.
-* Страница link:../../support[поддержки] изобилует информацией о FreeBSD. включая списки рассылки, группы пользователей, серверы веб и FTP-серверы, информацию о релизах и ссылки на некоторые источники информации о UNIX(R).
-
-[[fbsd]]
 == Изучение FreeBSD
 
-* Если вы ещё не устанавливали операционную систему, и пока не решили, какая версия FreeBSD подходит вам лучше всего, статья Выбор подходящей для вас версии FreeBSD предназначена для того, чтобы вам помочь. Скорее всего вам подойдет link:&u.rel2.announce;[последний релиз]. (Обратитесь к Руководству для выяснения причин, по которым вам *не следует* пытаться использовать другие версии.) Перед тем, как начать, внимательно прочтите link:{handbook}#install[инструкции по установке], а также каждый из текстовых файлов *.TXT, находящихся на сервере FTP или на установочном компакт-диске. Они находятся там, потому что в них содержится нужная вам информация. Также прочтите свежий link:https://www.FreeBSD.org/releases/[файл с сообщениями об ошибках] с веб-сервера, если он был обновлён.
-+
-Если вы решили скачать FreeBSD, то перед тем, как начать, посмотрите, доступны ли ещё эти иллюстрированные и подробные http://www.lemis.com/what-to-download.html[инструкции по скачиванию] от предыдущей версии. Они помогут сделать весь процесс гораздо проще и понятнее.
-* Имеется некоторое количество link:../../docs/books/articles[коротких статей и пособий]. Краткое пособие http://andrsn.stanford.edu/FreeBSD/[Для тех, кто является новичком как во FreeBSD, так и в Unix], популярно среди абсолютных новичков. Вам совсем не нужно много знать, чтобы получить удовольствие от его чтения. Его также можно загрузить в форматах ftp://andrsn.stanford.edu/pub/[postscript или RTF] для вывода на печать.
-* Первое, что многим нужно настроить, является протокол ppp, по установке которого имеется много документации. Вы можете начать, например, с тех частей link:{handbook}[Руководства], которые вам подходят, а затем обратиться к странице, посвящённой http://www.awfulhak.org/ppp.html[ppp], чтобы найти другие источники информации и самые последние обновления.
-* Книга Грега Лиэя http://www.freebsdmall.com/cgi-bin/fm/bsdcomp4[The Complete FreeBSD], издаваемая O'Reilly. Для чтения этой книги требуется лишь минимальный опыт работы с UNIX и в ней начинающий проходит все шаги от установки до всего, что нужно знать для запуска и эксплуатации FreeBSD. Вам также объяснят, что вы делаете и почему.
-* link:{handbook}[Руководство FreeBSD] и link:{faq}[Часто Задаваемые Вопросы (FAQ)] являются основной документацией по FreeBSD. Их необходимо прочесть, они содержат очень много материала для начинающих, а также некоторый достаточно продвинутый материал. Не волнуйтесь, если не сможете сразу понять сложные разделы. Руководство содержит инструкции по установке, а также приводит список книг и онлайн ресурсов, а в FAQ имеется раздел по устранению неисправностей.
-* Подключайтесь к списку рассылки FreeBSD-Questions, чтобы увидеть вопросы, которые вы стеснялись задать и ответы на них. Подпишитесь, заполнив форму http://lists.FreeBSD.org/mailman/listinfo/freebsd-questions. Вы можете просматривать старые вопросы и ответы с помощью link:../../search/#mailinglists[страницы поиска].
-* Основной телеконференцией для обсуждения FreeBSD является news:comp.unix.bsd.freebsd.misc[comp.unix.bsd.freebsd.misc]. Заглядывайте также в конференцию news:comp.unix.bsd.freebsd.announce[comp.unix.bsd.freebsd.announce].
-* link:https://www.FreeBSD.org/cgi/man.cgi[Страницы справочника] хороши для получения справочной информации, но не всегда подходят для введения новичка в курс дела. Чем больше вы с ними работаете, тем быстрее они становятся удобным инструментом. Некоторые страницы очень хорошо подходят для новичков, так что всегда заглядывайте туда. Например, страница справочника о ppp, больше похожа на учебник.
+* link:{handbook}[FreeBSD Handbook] и link:{faq}[Часто задаваемые вопросы (FAQ)] являются основными документами по FreeBSD. Это обязательное чтение, содержащее много материала как для новичков, так и для опытных пользователей. Пользователям, интересующимся установкой графического интерфейса, следует обратиться к главе link:{handbook}x11[X Window System].
+* https://man.freebsd.org/cgi/man.cgi[Страницы руководства] хороши для справки, но не всегда являются лучшим введением для новичка. Они обычно предоставляют информацию о конкретной команде, драйвере или службе.
 
-[[unix]]
-== Изучение UNIX(R)
+== Вопросы и поддержка
 
-Многие из проблем, с которыми сталкиваются новички, происходят из-за незнакомства с командами UNIX, требуемыми для исправления проблем во FreeBSD. Если вы не знаете UNIX, вам придется бороться с двумя трудностями одновременно. К счастью. существует очень много ресурсов, помогающих облегчить этот процесс.
+* Присоединяйтесь к списку рассылки FreeBSD-Questions, чтобы увидеть вопросы, которые вы боялись задать, и ответы на них. Подпишитесь, заполнив форму: https://lists.FreeBSD.org/subscription/freebsd-questions. Вы можете найти старые вопросы и ответы на link:../../search/#mailinglists[странице поиска].
+* https://forums.freebsd.org[Форумы FreeBSD] предлагают другой канал поддержки. Многие пользователи написали различные руководства, и многие новички получают там помощь.
+* Вы можете link:../../search/[осуществить поиск] по Handbook и FAQ, всему веб-сайту или архивам списков рассылки FreeBSD.
+* На странице link:../../support/[Поддержка] содержится много информации о FreeBSD, включая списки рассылки, группы пользователей, веб-сайты, информацию о выпусках и ссылки на некоторые источники информации о UNIX(R).
 
-* Глава link:{handbook}#basics[Основы UNIX(R)] Руководства FreeBSD Handbook описывает основные команды и функциональность операционной системы FreeBSD. Большая часть информации, предоставляемой этим документом, также относится к любой другой UNIX(R)-подобной операционной системе.
-* В любом приличном книжном магазине найдется много книг, доступных для начинающих, вроде серии пособий "для идиотов". Если вам нужно что-то действительно легкое для понимания, посмотрите, что есть вообще и выберите то, что вам покажется наиболее понятно написанным. Весьма скоро вам захочется перейти к книге, которая освещает вопрос более подробно.
-* Одной из книг, часто упоминаемой новичками, является [[ufti]]_UNIX for the Impatient_ (авторы Paul W. Abrahams и Bruce R. Larson), издаваемая Addison-Wesley. Она может использоваться как книга для изучения UNIX, так и как справочник, и включает введение в основы UNIX и полезную главу об использовании X Window System.
-* Другой популярной книгой является _UNIX Power Tools_ (авторы Jerry Peek, Tim O'Reilly и Mike Loukides), издаваемая O'Reilly and Associates. Она организована в виде серий кратких статей, каждая из которых посвящена решению какой-либо проблемы, и эти статьи имеют ссылки на другие со связанным материалом. Хотя эта книга изначально не ориентирована специально на новичков, ее структура является идеальной для новичков, которым нужно срочно решить проблему или у которых нет времени для просмотра всей книги. Более простой материал находится в начале книги, хотя множество кратких простых главок разбросано по всей книге.
-* http://www-wks.acs.ohio-state.edu/unix_course/unix.html[Вводный курс по UNIX] из Ohio State University доступен в сети в форматах HTML, postscript и Acrobat PDF.
-* http://www.mcsr.olemiss.edu/unixhelp/[UNIXhelp for Users] - другое вводное руководство, которое доступно в формате HTML на ближайшем зеркальном сервере и может быть установлено на вашу систему.
-* Вопросам о UNIX посвящена телеконференция news:comp.unix.questions[comp.unix.questions], а соответствующий http://www.cse.ohio-state.edu/hypertext/faq/usenet/unix-faq/faq/top.html[Frequently Asked Questions]. Вы также можете получить копию ftp://rtfm.mit.edu/pub/usenet/news.answers/unix-faq/faq/[FAQ] с сервера RMIT FTP. Для новичков в первую очередь представляют интерес разделы 1 и 2.
-* Другой интересной телеконференцией является news:comp.unix.user-friendly[comp.unix.user-friendly] для которой также имеется http://www.faqs.org/faqs/unix-faq/user-friendly/index.html[FAQ]. Хотя эта конференция посвящена дружественному интерфейсу, она может содержать некоторую полезную информацию для начинающих. ftp://rtfm.mit.edu/pub/usenet/news.answers/unix-faq/user-friendly[FAQ] этой конференции доступен по FTP.
-* Имеется множество других веб-серверов, содержащих списки учебников и справочников по UNIX. Одно из лучших мест, с которого можно начать, является страница UNIX на сервере http://www.yahoo.com/Computers_and_Internet/Software/Operating_Systems/Unix/[Yahoo!].
+== Изучение проектов на основе FreeBSD
 
-[[xwin]]
-== Изучение X Window System
+FreeBSD широко используется в качестве строительного блока для других коммерческих и открытых операционных систем. Некоторые из наиболее широко используемых и общедоступных систем перечислены ниже.
 
-X Window System используется во многих операционных системах, включая FreeBSD. Документация по X может быть найдена на сайтах http://www.x.org/[X.Org Foundation] или http://www.xfree86.org/[The XFree86 Project, Inc.] в зависимости от того, какую версию вы используете. Однако отметьте, что большую часть этой документации составляет справочная информация, которая трудна для понимания новичками.
+* https://www.truenas.com/[TrueNAS] — это программное обеспечение для сетевых систем хранения данных (NAS), которое обеспечивает общий доступ к данным и защищает их от современных угроз, таких как программы-вымогатели и вредоносное ПО. TrueNAS позволяет пользователям и клиентским устройствам легко получать доступ к общим данным через практически любой протокол общего доступа.
+* https://www.ghostbsd.org[GhostBSD] — основанная на FreeBSD, GhostBSD использует среду GTK для обеспечения красивого внешнего вида и комфортной работы на современной платформе BSD, предлагая естественную и нативную рабочую среду UNIX(R).
+* https://nomadbsd.org[NomadBSD] — это постоянная живая система для USB-флеш-накопителей, основанная на FreeBSD. Благодаря автоматическому определению и настройке оборудования, она сконфигурирована для использования в качестве готовой к работе десктопной системы, но также может применяться для восстановления данных, в образовательных целях или для проверки аппаратной совместимости FreeBSD.
+* https://www.midnightbsd.org[MidnightBSD] — это операционная система, производная от BSD, разработанная с учетом потребностей пользователей настольных компьютеров. Она включает всё программное обеспечение, которое вы ожидаете для повседневных задач: электронную почту, веб-серфинг, обработку текстов, игры и многое другое.
+* http://www.pfsense.org[pfSense] — это сетевое решение безопасности на основе FreeBSD. Программное обеспечение pfSense с помощью системы пакетов способно обеспечить ту же функциональность или превзойти распространенные коммерческие брандмауэры, без каких-либо искусственных ограничений. Он успешно заменил все коммерческие брандмауэры известных брендов, которые только можно представить, во многочисленных инсталляциях по всему миру.
 
-* Три из упомянутых книг содержат главы, дающие вводную информацию по установке, настройке и использованию X Window System на уровне начинающих пользователей: глава link:{handbook}#x11[X Window System] Руководства FreeBSD, <<cfbsd,The Complete FreeBSD>> и <<ufti,UNIX for the Impatient>>.
-* Перед тем, как вы сможете получить X того вида, который вам нравится, вам потребуется выбрать менеджер окон. Посетите страничку http://xwinman.org/[Window Managers for X] и поперемещайтесь по начальным ссылкам, чтобы получить информацию о менеджерах окон, затем вернитесь и прочтите "Основы". После этого сравните их различные типы. (В придачу здесь имеется руководство по UNIX для начинающих.) Большинство, если не все, из представленных здесь менеджеров окон могут быть установлены из коллекции портов FreeBSD.
+== Как принять участие
 
-[[people]]
-== Помощь другим людям
+Каждый может внести свой вклад в сообщество FreeBSD, даже новички! Некоторые активно работают с новой группой по продвижению, а другие присоединились к link:../../docproj/[Проекту документации] в качестве рецензентов. Другие новички FreeBSD могут иметь особые навыки и опыт, которыми можно поделиться — связанные с компьютерами или нет, или просто хотят познакомиться с другими новичками и помочь им почувствовать себя желанными гостями. Здесь всегда есть люди, которые помогают другим просто потому, что им это нравится.
 
-У каждого найдётся, чем поделиться с сообществом FreeBSD, даже у новичка! Некоторые заняты работой в новой группе по продвижению FreeBSD, другие участвуют в link:../../docproj/[Проекте документирования] как корректоры. Другие новички могут поделиться некоторыми своими способностями и умениями, как связанными с компьютерами, так и нет, или просто встретиться с другими новичками и помочь им. Вокруг всегда найдется немало людей, готовых помочь другому просто потому, что им нравится это делать.
+Друзья, использующие FreeBSD, — это прекрасный ресурс. Ни одна книга не может заменить беседу по телефону или за пиццей с кем-то, у кого такие же интересы, кто радуется похожим достижениям и сталкивается с теми же трудностями. Если у вас не так много друзей, использующих FreeBSD, подумайте о создании установочных носителей FreeBSD и познакомьте новых пользователей с вашей любимой операционной системой.
 
-Друзья, которые используют FreeBSD, являются прекрасным источником информации. Никакая книга не заменит беседу по телефону или за пиццей с человеком, у которого имеются похожие интересы, который получает удовольствие от достижения тех же самых успехов и встречается с теми же самыми трудностями. Если у вас не так уж много друзей, использующих FreeBSD, вы их можете завести с помощью старых компакт-дисков с FreeBSD.
+link:../../usergroups/[Группы пользователей] — это хорошее место для встреч с другими пользователями FreeBSD. Если поблизости никого нет, вы можете подумать о создании такой группы!
 
-Собрания link:../../usergroups#user[групп пользователей] являются тем местом, где можно встретить других пользователей FreeBSD. Если рядом нет ни одной такой группы, может, вы сможете ее создать!
+Для получения дополнительной информации о вовлечении в сообщество см. статью link:{contributing}[Содействие проекту FreeBSD].
 
-Перед тем, как обсуждать проблемы с реальными людьми, не мешает посмотреть http://catb.org/~esr/jargon/html/index.html[Словарь используемого жаргона].
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (30.08.2023): 6b6c014bd0be61388d73e905045f635127130573
+//
