--- a/website/themes/beastie/i18n/ru.toml
+++ b/website/themes/beastie/i18n/ru.toml
@@ -187,6 +187,9 @@ other = "и популярнейших интегрированных сетев
 [learnMore]
 other = "Подробнее"
 
+[legacy]
+other = "Ста\u00ADрые про\u00ADдук\u00ADтив\u00ADные ре\u00ADли\u00ADзы"
+
 [getThe]
 other = "Получить"
 
