website: RU - sync ru/press pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53936

--- a/website/content/ru/press/_index.adoc
+++ b/website/content/ru/press/_index.adoc
@@ -1,11 +1,15 @@
 ---
-title: "FreeBSD in the Press"
+title: "Пресса о FreeBSD"
 sidenav: about
 loadPress: true
 ---
 
-= FreeBSD in the Press
+= Пресса о FreeBSD
 
-Если вы не нашли здесь определённой публикации, пожалуйста, отправьте её URL на адрес www@FreeBSD.org
+Если вы не нашли здесь определённой публикации, пожалуйста, отправьте её URL на адрес freebsd-doc@FreeBSD.org
 
-Кроме того, новости прессы о проекте FreeBSD Java вы можете найти, посетив страничку link:../java/press/[FreeBSD/Java в Прессе].
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (26.01.2021): 989d921f5d4ac8d8b7c831c13b8954ad1901be24
+//
